k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worldcup-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worldcup-frontend
  template:
    metadata:
      labels:
        app: worldcup-frontend
    spec:
      containers:
        - name: worldcup-frontend-container
          image: ghcr.io/szdomonkos01/worldcup-frontend:1776681479
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: ghcr-auth-token

---

apiVersion: v1
kind: Service
metadata:
  name: worldcup-frontend-service
spec:
  selector:
    app: worldcup-frontend
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: worldcup-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - worldcup.szdomonkos.jcloud.jedlik.cloud
      secretName: worldcup-certificate
  rules:
    - host: worldcup.szdomonkos.jcloud.jedlik.cloud
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: worldcup-backend-service
                port:
                  number: 3001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: worldcup-frontend-service
                port:
                  number: 80
